hphp/test/zend/good/ext/date/tests/date_create-1.php.skipif
<?php if (!function_exists('date_create')) echo "SKIP"; ?>