hphp/test/zend/bad/ext/standard/tests/misc/time_nanosleep_error1.php.skipif
<?php if (!function_exists('time_nanosleep')) die("skip"); ?>